@@ -24,12 +24,12 @@
     <dependency>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-controls</artifactId>
-        <version>17</version>
+        <version>17.0.1</version>
     </dependency>
     <dependency>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-fxml</artifactId>
-        <version>17</version>
+        <version>17.0.1</version>
     </dependency>
 
     <!-- junit testing med jupiter -->
@@ -107,12 +107,27 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
       </plugin>
+      
 
       <!-- Maven Surefire plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-      </plugin>
+        <configuration>
+            <skipTests>${skipUiTests}</skipTests>
+            <systemPropertyVariables>
+                <headless>${headlessTests}</headless>
+            </systemPropertyVariables>
+            <forkCount>0</forkCount>
+            <reuseForks>true</reuseForks>
+            <argLine>
+            @{jaCoCoArgLine} -Dtestfx.robot=awt
+            --add-opens bikerentalapp.ui/bikerentalapp.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+            --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+            --add-exports javafx.graphics/com.sun.glass.ui.delegate=ALL-UNNAMED
+            </argLine>
+        </configuration>
+    </plugin>
 
 
       <plugin>
@@ -134,11 +149,17 @@
       <plugin>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-maven-plugin</artifactId>
-        <version>0.0.6</version>
-        <!-- Default configuration for running -->
-        <!-- Usage: mvn javafx:run -->
+        <version>0.0.8</version>
         <configuration>
-            <mainClass>bikerentalapp.ui.App</mainClass>
+            <mainClass>bikerentalapp.ui/bikerentalapp.ui.App</mainClass>
+            <!-- Config for jlink -->
+            <compress>2</compress>
+            <noHeaderFiles>true</noHeaderFiles>
+            <stripDebug>true</stripDebug>
+            <noManPages>true</noManPages>
+            <launcher>bikerentalfx</launcher>
+            <jlinkImageName>bikerentalfx</jlinkImageName>
+            <jlinkZipName>bikerentalfx</jlinkZipName>
         </configuration>
       </plugin>
 
@@ -160,6 +181,32 @@
         <artifactId>spotbugs-maven-plugin</artifactId>
       </plugin>
 
+      <!-- Run the jpackage tool -->
+      <plugin>
+        <groupId>org.panteleyev</groupId>
+        <artifactId>jpackage-maven-plugin</artifactId>
+        <version>1.4.0</version>
+        <configuration>
+            <name>BikeRentalFX</name>
+            <appVersion>1.0.0</appVersion>
+            <vendor>it1901</vendor>
+            <destination>target/dist</destination>
+            <module>bikerentalapp.ui/bikerentalapp.ui.App</module>
+            <runtimeImage>target/bikerentalfx</runtimeImage>
+            <javaOptions>
+                <option>-Dfile.encoding=UTF-8</option>
+            </javaOptions>
+            <!-- Linux -->
+            <linuxShortcut>true</linuxShortcut>
+            <linuxMenuGroup>BikeRentalFX</linuxMenuGroup>
+
+            <!-- Windows -->
+            <winDirChooser>true</winDirChooser>
+            <winShortcut>true</winShortcut>
+            <winMenu>true</winMenu>
+            <winMenuGroup>BikeRentalFX</winMenuGroup>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
